--- a/design_client/design_client/MainWindow.xaml
+++ b/design_client/design_client/MainWindow.xaml
@@ -3,10 +3,87 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:design_client"
+        xmlns:local="clr-namespace:design_client.Views"
+        xmlns:mv="clr-namespace:design_client.Model.View"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.FontWeight="Medium"
+        TextElement.FontSize="14"
+        FontFamily="{materialDesign:MaterialDesignFont}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Height="700" Width="1020">
+    <WindowChrome.WindowChrome>
+        <WindowChrome NonClientFrameEdges="Left,Bottom,Right" GlassFrameThickness="-1" CaptionHeight="50"/>
+    </WindowChrome.WindowChrome>
+    <Window.Template>
+        <ControlTemplate TargetType="Window">
+            <Grid Margin="0 0 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
+                <DockPanel Margin="10 0 0 0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">
+                    <TextBlock FontStyle="Italic">Design</TextBlock>
+                </DockPanel>
+
+                <DockPanel Grid.Row="0" Grid.Column="2">
+
+                </DockPanel>
+                <ContentPresenter Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"/>
+            </Grid>
+        </ControlTemplate>
+    </Window.Template>
+    <!--Body-->
+    <Grid Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <!--左侧菜单栏-->
+        <StackPanel Width="200" Grid.Row="0" Grid.Column="0" Background="White">
+            <ListView SelectedIndex="0" Name="ControlTab"
+                      SelectionChanged="ControlTab_SelectionChanged">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel LastChildFill="False">
+                            <materialDesign:PackIcon Kind="{Binding IconKind}" DockPanel.Dock="Left"/>
+                            <TextBlock FontFamily="SimSun" Margin="5 0 0 0" 
+                                       DockPanel.Dock="Right" Text="{Binding Title}"/>
+                        </DockPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemsSource>
+                    <x:Array Type="mv:MenuTabItem">
+                        <mv:MenuTabItem Title="主页" IconKind="Home"/>
+                        <mv:MenuTabItem Title="搜索" IconKind="Home"/>
+                        <mv:MenuTabItem Title="默认配置" IconKind="Home"/>
+                        <mv:MenuTabItem Title="更改配置" IconKind="Home"/>
+                    </x:Array>
+                </ListView.ItemsSource>
+            </ListView>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="0">
+            
+        </StackPanel>
+        <materialDesign:Transitioner Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"  SelectedIndex="0" 
+                                     Name="ControlContent"
+                                     >
+            <local:HomeControl/>
+            <local:SearchControl/>
+            <local:DefaultConfigControl/>
+            <local:CustomControl/>
+        </materialDesign:Transitioner>
     </Grid>
+
 </Window>
