--- a/design_client/design_client/Views/Components/LoginControl.xaml
+++ b/design_client/design_client/Views/Components/LoginControl.xaml
@@ -3,10 +3,49 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:design_client.Views.Components"
+             xmlns:local="clr-namespace:design_client.Views.Components" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Width="350" Height="330">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1">
+            <TextBlock Margin="40" HorizontalAlignment="Center" FontStyle="Italic"
+                       Style="{StaticResource MaterialDesignHeadline4TextBlock}">
+                供应商登录
+            </TextBlock>
+            <DockPanel >
+                <materialDesign:PackIcon Kind="User" VerticalAlignment="Bottom" />
+                <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                         VerticalAlignment="Center" Margin="5 0 0 0" x:Name="UsernameBox"
+                         materialDesign:HintAssist.HelperText="{Binding UsernameHelper}"
+                         materialDesign:HintAssist.Hint="username" Text="{Binding Username}"></TextBox>
+            </DockPanel>
+            <DockPanel VerticalAlignment="Center" Margin="0 10 0 0">
+                <materialDesign:PackIcon Kind="Lock" VerticalAlignment="Bottom" />
+                <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                         Margin="5 0 0 0" VerticalAlignment="Center" x:Name="PasswordBox"
+                         materialDesign:HintAssist.HelperText="{Binding PasswordHelper}"
+                         materialDesign:HintAssist.Hint="password" Text="{Binding Password}"></TextBox>
+            </DockPanel>
+            <Button Margin="0 15 0 0" Style="{StaticResource MaterialDesignFlatButton}" 
+                    Click="Login_Click"
+                    FontFamily="SimSun" Cursor="Hand">
+                登录
+            </Button>
+            <Button Margin="0 5 0 0" FontFamily="SimSun"
+                    Style="{StaticResource MaterialDesignFlatButton}"
+                    Click="Cancle_Click"
+                    >
+                取消
+            </Button>
+        </StackPanel>
     </Grid>
 </UserControl>
